Add ajax for create profile

--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,4 +1,4 @@
-<form action='/users/login' method='post' id="login_form">
+<form id="login_form" class="user_form" action='/users/login' method='post' >
   <label for='user_name_field'>User Name:</label> <br>
   <input id='user_name_field' type='text' name='user_name' placeholder='JohnDoe1990'> <br>
   <label for='password_field'>Password:</label> <br>
