--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,7 +1,7 @@
 <form id="login_form" class="user_form" action='/users/login' method='post' >
   <label for='user_name_field'>User Name:</label> <br>
-  <input id='user_name_field' type='text' name='user_name' placeholder='JohnDoe1990'> <br>
+  <input id='user_name_field' type='text' name='user_name'> <br>
   <label for='password_field'>Password:</label> <br>
-  <input id='password_field' type='password' name='password' placeholder='hunter2'> <br>
+  <input id='password_field' type='password' name='password'> <br>
   <input id='login_submit' type='submit' value='Log in'>
 </form>
