--- a/public/css/application.css
+++ b/public/css/application.css
@@ -49,6 +49,7 @@ header #logout_link {
   padding: 0.5%;
   margin-right: 4%;
   padding-bottom: 1%;
+  border: 2px solid #D1D1D1;
 }
 
 .user_form input{
